syntax = "proto3";// see: https://protobuf.dev/programming-guides/proto3/

//import "google/protobuf/timestamp.proto";

// after compilation, you can access the models under this name.
package proto;

service User {
  rpc GetUser (UserRequest) returns (UserReply) {}
  rpc CreateUser (CreateUserRequest) returns (CreateUserReply) {}
  rpc LoginUser (LoginUserRequest) returns (LoginUserReply) {}
  rpc RefreshAccessToken (RefreshTokenRequest) returns (RefreshTokenReply) {}
  rpc LogOutUser (LogOutRequest) returns (LogOutReply) {}
}

message Empty {}

//Note: the data types and the data types in the migration file of postgres must be the same.
message UserRequest {
    int32 id = 1 ;
}

message UserReply {
    int32 id = 1 ;
    string name = 2;
    string email = 3;
}

message CreateUserRequest {
    string name = 1;
    string email = 2;
    string password = 3;
}

message CreateUserReply {
    string message = 1;
}

message LoginUserRequest {
    string email = 1;
    string password = 2;
}

message LoginUserReply {
    string access_token = 1;
    int64 access_token_age = 2;
    string refresh_token = 3;
    int64 refresh_token_age = 4;
}

message RefreshTokenRequest {
    string refresh_token = 1;
}

message RefreshTokenReply {
    string access_token = 1;
    int64 access_token_age = 2;
}

message LogOutRequest {
    string refresh_token = 1;
    string access_token_uuid = 2;
}

message LogOutReply {
    string message = 1;
}