syntax = "proto3";// see: https://protobuf.dev/programming-guides/proto3/

//import "google/protobuf/timestamp.proto";

// after compilation, you can access the models under this name.
package proto;

service UserService {
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {}
  rpc LoginUser (LoginUserRequest) returns (LoginUserResponse) {}
  rpc RefreshAccessToken (RefreshTokenRequest) returns (RefreshTokenResponse) {}
  rpc LogOutUser (LogOutRequest) returns (LogOutResponse) {}
}

service UserProfileService {
    rpc GetUser (GetUserRequest) returns (GetUserResponse) {}
    rpc ListUsers (ListUsersRequest) returns (ListUsersResponse) {}
}

message GetUserRequest {
    int32 id = 1 ;
}

message GetUserResponse {
    int32 id = 1 ;
    string name = 2;
    string email = 3;
}

message ListUsersRequest {
    int64 page = 2;
    int64 size = 3;
}

message ListUsersResponse {
    int64 total_count = 1;
    int64 total_pages = 2;
    int64 page = 3;
    int64 size = 4;
    bool has_more = 5;
    repeated GetUserResponse users = 6;
}

message Empty {}

enum RoleType {
    ROLETYPE_ADMIN = 0;
    ROLETYPE_CUSTOMER = 1;
}

message CreateUserRequest {
    string name = 1;
    string email = 2;
    string password = 3;
    RoleType role = 4;
}

message CreateUserResponse {
    string message = 1;
}

message LoginUserRequest {
    string email = 1;
    string password = 2;
}

message LoginUserResponse {
    string access_token = 1;
    int64 access_token_age = 2;
    string refresh_token = 3;
    int64 refresh_token_age = 4;
}

message RefreshTokenRequest {
    string refresh_token = 1;
}

message RefreshTokenResponse {
    string access_token = 1;
    int64 access_token_age = 2;
}

message LogOutRequest {
    string refresh_token = 1;
    string access_token = 2;
}

message LogOutResponse {
    string message = 1;
}